# monkey3

./: .gitignore  CMakeLists.txt
assets/actors/: dave.yaml
assets/shaders/: line.vert  quad.frag  quad.vert  screen.frag  screen.vert
core/include/monkey3/: adventureroom.h  assetmanager.h  batch.h  camera.h  framebuffer.h  game.h  mouselistener.h  node.h  render_helper.h  renderable.h  renderer.h  room.h  roomfactory.h  shader.h  tex.h  utils.h  vertex.h  xmlroomfactory.h  yaml_extension.h
core/include/monkey3/math/: astar.h  geometry.h  geometry_detail.h  graph.h  walkarea.h  walkarea_classes.h
core/include/monkey3/renderables/: lines.h  quad.h  scumm_actor.h  scumm_actor_info.h
core/src/: adventureroom.cpp  camera.cpp  framebuffer.cpp  game.cpp  loaders.cpp  node.cpp  render_helper.cpp  renderable.cpp  renderer.cpp  room.cpp  shader.cpp  tex.cpp  utils.cpp  xmlroomfactory.cpp
core/src/math/: astar.cpp  geometry.cpp  geometry_detail.cpp  walkarea.cpp
core/src/renderables/: lines.cpp  quad.cpp  scumm_actor.cpp  scumm_actor_info.cpp
demos/: hello.cpp  quad.cpp  yamlload.cpp
unittest/: main.cpp
